@@ -78,4 +78,4 @@ location = root
 [MetaNoIndex]
 directory = profiles
 
-[Author::Plicease::UploadToCPAN]
+[Author::Plicease::UploadToMatrix]
